--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
-  "angularCompilerOptions":{
-    "disableTypeScriptVersionCheck": true    
+  "angularCompilerOptions": {
+    "disableTypeScriptVersionCheck": true
   },
   "compilerOptions": {
     //"skipLibCheck": true,
@@ -9,20 +9,14 @@
     "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
-    "declaration": false,    
+    "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "plugins": [
-      { "name": "tslint-language-service"}
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
+    "plugins": [{ "name": "tslint-language-service" }]
   }
 }
