--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "@angular/platform-browser-dynamic": "^9.1.12",
     "@angular/router": "^9.1.12",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@cosmjs/cosmwasm": "^0.23.1",
+    "@cosmjs/cosmwasm-stargate": "^0.27.1",
+    "@cosmjs/launchpad": "^0.23.1",
+    "@cosmjs/stargate": "^0.27.1",
+    "@keplr-wallet/types": "^0.9.12",
     "@microsoft/signalr": "^3.1.6",
     "@nebular/auth": "5.0.0",
     "@nebular/bootstrap": "^5.0.0",
@@ -68,6 +73,7 @@
     "ionicons": "2.0.1",
     "jquery": "^3.5.1",
     "leaflet": "1.2.0",
+    "libsodium": "^0.7.10",
     "moment": "^2.27.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.6",
@@ -78,22 +84,19 @@
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "path": "^0.12.7",
     "quill": "^1.3.7",
     "resize-observer-polyfill": "^1.5.1",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "stream": "^0.0.2",
     "tinymce": "^5.7.0",
     "tslib": "^1.10.0",
     "twilio-client": "^1.12.3",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
-    "@cosmjs/launchpad": "^0.23.1",
-    "@cosmjs/cosmwasm": "^0.23.1",
-    "@cosmjs/cosmwasm-stargate": "^0.27.1",
-    "@cosmjs/stargate": "^0.27.1",
-    "@keplr-wallet/types": "^0.9.12",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
